--- a/src/main/resources/templates/Search.html
+++ b/src/main/resources/templates/Search.html
@@ -20,7 +20,13 @@
                 enable_page_level_ads: true
             });
 		</script>
-
+        <script type='text/javascript'>
+            $(document).ready(function() {
+                $('img#closed').click(function(){
+                    $('#btm_banner').hide(90);
+                });
+            });
+        </script>
 		<style type='text/css'>
 			div#btm_banner {
 				bottom: 0;
