--- a/src/main/resources/static/css/profile_sample.css
+++ b/src/main/resources/static/css/profile_sample.css
@@ -17,3 +17,23 @@
 
 	
 }
+
+.abc{  
+  box-shadow: 0 0px 0px 0 rgba(0,0,0,0);
+  transition:0.4s;
+}
+.abc:hover
+{
+		
+	    box-shadow: 0 4px 4px 1px rgba(0.2,0.2,0.2,0.3);
+
+}
+#update_button
+{
+	transition:0.4s;
+}
+#update_button:hover
+{
+		    box-shadow: 0 3px 3px 1px rgba(0.2,0.2,0.2,0.3);
+
+}
