--- a/src/main/resources/static/css/org_profile_css.css
+++ b/src/main/resources/static/css/org_profile_css.css
@@ -33,12 +33,13 @@
 
 .abcd
 {
-	background-color:lightgrey;
-	color:darkslategrey;
+     font-family: 'Open Sans', sans-serif;
+	 transition:0.4s;
+
 }
 
 .abcd:hover{
-	    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 	
 }
