--- a/src/main/resources/templates/profile_sample.html
+++ b/src/main/resources/templates/profile_sample.html
@@ -6,6 +6,8 @@
 	 <meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1">
 	 <!-- <!  <link rel="stylesheet" href="bootstrap.min.css">  -->
+	 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Oxygen" rel="stylesheet">
 	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -16,46 +18,85 @@
 	<script th:src="@{script/profile_sample.js}"></script>
 	  <style>
 	  body, html, .container-fluid {
+	       font-family: 'Oxygen', sans-serif;
+
 	     
 		 width:100%
 		}
+		  .fa {
+padding-top:10px;
+  padding-right: 10px;
+  padding-left:10px;
+  padding-bottom:10px;
+  font-size: 20px;
+  width: 40px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+	color:white;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
 	  </style>
 </head>
 
 <body>
 <!-- NAVIGATION BAR -->
-<nav class="navbar navbar-inverse" style="background-color:#AE1616;width:100%" >
-  <div class="container-fluid" style="text-align:left">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="homePage.html" id="abc">HoosierEvents</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li id="homepage"><a href="homePage.html" class="top-nav-links" style="color:white;text-align:">Home</a></li>
-    </ul>
-	<ul class="nav navbar-nav" id="explore">
-      <li><a class="top-nav-links" href="search_events.html" style="color:white;">Explore Events</a></li>
-    </ul>
 	
-<!--    <form class="navbar-form navbar-left" action="">
-      <div class="form-group">
-        <input type="text" class="form-control" style="text-align:center;" placeholder="search for events!">
-      </div>
-      <button type="submit" class="btn btn-default" style="height:4.5% !important;width:15%!important;position:relative"><span class="glyphicon glyphicon-search"></span></button>
-    </form> -->
-	<ul class="nav navbar-nav navbar-right">
-	 <!--<li><a class="top-nav-links" id="createevent" href="create_event.html" style="">Create Event</a></li>-->
-      <li><a href="#" style="">Sign Out</a></li>
-    </ul>
-
-	</div>
-</nav>
-<!--<div style="background-color:red;left:-30%;height:100%;width:40%;position:relative;">-->
-<div class="container-fluid">
+<div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
 <div class="row">
-	<div class="col-sm-4" style="border-right:1px solid lightgrey">
+<div class="col-sm-2"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></div>
+<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Explore</h5></button></div>
+<div class="col-sm-5"><input type="text" class="form-control" id="myInput" placeholder="Search"></div>
+<div class="col-sm-2"><button id="myBtn" style="display:none;" onclick="javascript:alert('Hello World!')"></button></div>
+<div class="col-sm-1">
+<form action="/">
+        <button class="btn-default xyz" id="profilebutton"  style="color:#AE0D0D;background-color:white;border:0px; display: none"><h5>Profile</h5></button>
+    </form>
+	</div>
+<div class="col-sm-1">
+    <form action="/login">
+        <button class="btn-default xyz" id="loginbutt" style="color:#AE0D0D;background-color:white;border:0px;display: none"><h5>Login</h5></button>
+    </form>
+    <form action="/logout">
+        <button class="btn-default xyz" id="logoutbutt"  style="color:#AE0D0D;background-color:white;border:0px; display: none"><h5>Logout</h5></button>
+    </form>
+	
+</div>
+</div>
+</div>
+
+<!--<div style="background-color:red;left:-30%;height:100%;width:40%;position:relative;">-->
+<div class="container" style="width:100%;">
+<div class="row">
+	<div class="col-sm-4" style="">
 	<!--<div class="container" style="height:100%;position:relative;top:10%;">-->
 	  <h3>Welcome</h3>
-	  <h4 id="user_name_display">Prathamesh Deshpande</h4>
+	  <h4 id="user_name_display"></h4>
 	  <ul class="nav nav-pills nav-stacked">
 		<li class="active"><a data-toggle="pill" href="#dash">Dashboard</a></li>
 		<!--<li class="dropdown">
@@ -70,8 +111,7 @@
 		<!--<li><a data-toggle="pill" href="#">Menu 3</a></li>-->
 	  </ul>
 	</div>
-	
-	<div class="col-sm-8">
+	<div class="col-sm-8" style="height:500px;!important;overflow-y:scroll;">
 	
 <div class="tab-content">
     <div id="edit" class="tab-pane fade">
@@ -84,7 +124,7 @@
 	Contact<input type="text" class="form-control" id="user_contact">
 	Email<input type="text" class="form-control" id="user_email">
 	<br>
-	<button class="btn-block" id="update_button" onClick="updateUser()" style="width:50%;"><h5>Update Details </h5></button>
+	<button class="btn-block" id="update_button" onClick="updateUser()" style="width:50%;background-color:darkslategrey;color:white;border:1px solid darkslategrey;border-radius:3px;"><h5>Update Details </h5></button>
   </div>
 	
 	<div id="dash" class="tab-pane fade in active">
@@ -101,10 +141,9 @@
 	</div>
 	<br>
 	  <div class="col-sm-12" id="display_events">
-	  
+
 	  </div>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <!--<div id="menu1" class="tab-pane fade">
       <h3>Menu 1</h3>
@@ -122,60 +161,45 @@
 	</div>
 </div>
 </div><br><br>
-
-<!-- <!FOOTER DIV> -->
-<!-- 
-<div class="row" style="background-color:#AE1616; color:black">
-<div class="col-sm-3"><h5>Get Connected with us on Social Media</h5></div>
-<div class="col-sm-6"></div>
-<div class="col-sm-3">
-<div class="row" style="text-align:center">
-	<div class="col-sm-3">
-		            <a id="socialmedialink" href="#" class="fb-ic">
-		              <i class="fa fa-facebook white-text mr-4"> </i>
-		            </a>
-					</div>
-		          
-					<div class="col-sm-3">
-		            <a id="socialmedialink" href="#" class="tw-ic">
-		              <i class="fa fa-twitter white-text mr-4"> </i>
-		            </a>
-					</div>
-		    
-					<div class="col-sm-3">
-		            <a id="socialmedialink" href="#" class="gplus-ic">
-		              <i class="fa fa-google-plus white-text mr-4"> </i>
-		            </a>
-					</div>
-</div>
-</div>
-</div>
-<div class="row" style="background-color:#534E4E">
-	<div class="col-sm-4">
-	<div class="row"><h4>Hoosier Events</h4></div>
-		<div class="row"><h5>Connect with other enthusiasts and do what you enjoy. Signup to explore and host events!</h5></div>
+<div class="container-fluid fancy" style="border-top:1px solid lightgrey;text-align:center;top:0%;height:auto;position:relative;background-color: !important;color:">
+<br><div class="row" style="background-color:;">
+	<!--<div class="col-sm-4">
+	<div class="row" style="background-color:lightgrey"><div class="col-sm-12"><h4 style="color:#AE0D0D">Hoosier Events</h4></div></div>
+		<div class="row" style="text-align:center;"><div class="col-sm-12">Connect with other enthusiasts and do what you enjoy. Signup to explore and host events!</div></div>
 	<br>
-	</div>
-	<div class="col-sm-4 links" style="color:white"><h4>Useful Links</h4>
+	</div>-->
+	<div class="col-sm-6 links" style="color:#AE0D0D;"><div class="row"  style="font-family: 'Oxygen', sans-serif;
+background-color:"><div class="col-sm-12"><h4>About HoosierEvents</h4></div></div>
 		
-		<div class="row"><a href="" style="color:#48A2BD">Your Account</a></div>
-		<div class="row"><a href="" style="color:#48A2BD">About us</a></div>
-		<div class="row"><a href="" style="color:#48A2BD">Help</a></div>
+		<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+color:#3C48AE">Sitemap</a></h5></div></div>
+		<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+color:#3C48AE">About us</a></h5></div></div>
+		<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+color:#3C48AE">FAQs</a></h5></div></div>
 		<br>
 	</div>
 	
-	<div class="col-sm-4"><h4>Contact Us</h4>
-				            <i class="fa fa-home mr-3"></i>&nbsp Bloomington, IN 47408, US
+	<div class="col-sm-6"><div class="row"  style="background-color:"><div class="col-sm-12" style="font-family: 'Oxygen', sans-serif;
+text-align:center"><h4 style="color:#AE0D0D;">Connect with Us</h4></div></div>
+				           <!--  <i class="fa fa-home mr-3"></i>&nbsp Bloomington, IN 47408, US
 							<br>
 				            <i class="fa fa-envelope mr-3"></i>&nbsp info@example.com
 							<br>
-							<i class="fa fa-phone mr-3"></i>&nbsp + 01 234 567 88
+							<i class="fa fa-phone mr-3"></i>&nbsp + 01 234 567 88 -->
 
+		<div class="row">
+		<div class="col-sm-4"></div>
 
+		<div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-facebook"></a></div>
+<div class="col-sm-1" style="padding-right:25px;"><a href="#" class="fa fa-twitter"></a></div>
+<div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-google"></a></div>
+<div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-instagram"></a></div>
+<div class="col-sm-4"></div>
+		</div>
 	</div>
 </div>
 </div>
- -->
 
 </body>
 </html>
