--- a/src/main/resources/templates/org_profile.html
+++ b/src/main/resources/templates/org_profile.html
@@ -79,25 +79,22 @@ body, html, .container-fluid {
 <div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
 <div class="row">
 <div class="col-sm-2"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></div>
-<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Explore</h5></button></div>
-<div class="col-sm-5"><input type="text" class="form-control" id="myInput" placeholder="Search"></div>
-<div class="col-sm-2"><button id="myBtn" style="display:none;" onclick="javascript:alert('Hello World!')"></button></div>
+<div class="col-sm-1"></div>
+<div class="col-sm-6"></div>
+<div class="col-sm-1"></div>
 <div class="col-sm-1">
-<form action="/">
-        <button class="btn-default xyz" id="profilebutton"  style="color:#AE0D0D;background-color:white;border:0px; display: none"><h5>Profile</h5></button>
-    </form>
-	</div>
-<div class="col-sm-1">
-    <form action="/login">
-        <button class="btn-default xyz" id="loginbutt" style="color:#AE0D0D;background-color:white;border:0px;display: none"><h5>Login</h5></button>
-    </form>
-    <form action="/logout">
+ <form action="/logout">
         <button class="btn-default xyz" id="logoutbutt"  style="color:#AE0D0D;background-color:white;border:0px; display: none"><h5>Logout</h5></button>
     </form>
+</div>
+
+
+	</div>
+
+   
 	
 </div>
-</div>
-</div>
+
 	<!--<div style="background-color:red;left:-30%;height:100%;width:40%;position:relative;">-->
 	<div class="container-fluid" style="height: 100% !important;">
 		<div class="row">
@@ -113,8 +110,8 @@ body, html, .container-fluid {
 							<li><a data-toggle="pill" href="#approved">Live</a></li>
 							<li><a data-toggle="pill" href="#elapsed">Elapsed</a></li>
 						</ul></li>
-					<li><a data-toggle="pill" style="font-family: 'Open Sans', sans-serif;" href="#edit_events">Change Event
-							Information</a></li>
+					<!--<li><a data-toggle="pill" style="font-family: 'Open Sans', sans-serif;" href="#edit_events">Change Event
+							Information</a></li>-->
 					<li><a data-toggle="pill" style="font-family: 'Open Sans', sans-serif;" href="#edit">Edit Profile</a></li>
 					<!--<li><a data-toggle="pill" href="#">Menu 3</a></li>-->
 				</ul>
