--- a/src/main/resources/static/css/create_event.css
+++ b/src/main/resources/static/css/create_event.css
@@ -27,7 +27,7 @@ background-color:black;
 
 }
 
-.create_button{
+.event_host_button{
 	color:green;
 	background-color:white;
 	border: 2px solid green;
@@ -37,7 +37,7 @@ background-color:black;
 /*	width:60%;left:20%;height:40px !important;position:relative;background-color:#3B98C7;color:white;border:1px solid #3B98C7;border-radius:10px;
 */}
 
-.create_button:hover{
+.event_host_button:hover{
 	background-color:green;
 	color:white;
 	box-shadow:2px 2px 2px grey;
