--- a/src/main/resources/templates/admin_profile.html
+++ b/src/main/resources/templates/admin_profile.html
@@ -71,15 +71,19 @@ body, html, .container-fluid {
 <!-- NAVIGATION BAR -->
 <div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
 <div class="row">
-<div class="col-sm-2"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></div>
+    <div class="col-sm-2"><a href="/" style="text-decoration: none"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></a></div>
 <div class="col-sm-1"></div>
 <div class="col-sm-6"></div>
 <div class="col-sm-1"></div>
-<div class="col-sm-1">
- <form action="/logout">
-        <button class="btn-default xyz" id="logoutbutt"  style="color:#AE0D0D;background-color:white;border:0px; display: none"><h5>Logout</h5></button>
-    </form>
-</div>
+	<div class="col-sm-1">
+		<form action="/login">
+			<button class="btn-default xyz" id="loginbutt" style="color:#AE0D0D;background-color:white;border:0px;display: none"><h5>Login</h5></button>
+		</form>
+		<form action="/logout">
+			<button class="btn-default xyz" id="logoutbutt"  style="color:#AE0D0D;background-color:white;border:0px; display: none"><h5>Logout</h5></button>
+		</form>
+
+	</div>
 
 
 	</div>
@@ -236,7 +240,7 @@ text-align:center"><h4 style="color:#AE0D0D;">Connect with Us</h4></div></div>
 		<div class="row">
 		<div class="col-sm-4"></div>
 
-		<div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-facebook"></a></div>
+		<div class="col-sm-1" style="padding-right:25px;" ><a href="https://www.facebook.com/HoosierEvents" class="fa fa-facebook"></a></div>
 <div class="col-sm-1" style="padding-right:25px;"><a href="#" class="fa fa-twitter"></a></div>
 <div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-google"></a></div>
 <div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-instagram"></a></div>
@@ -412,6 +416,41 @@ function doPendingRequestRender1(users) {
 //----------------------------------
 
 //--------Harish----------------------
+</script>
+
+<script>
+
+    $(document).ready(function () {
+        $.ajax({
+                type: "GET",
+                url: '/getauth',
+                success: function (data) {
+                    console.log(data);
+                    if(data==="anonymousUser"){
+                        document.getElementById('logoutbutt').style.display="none";
+                        document.getElementById('loginbutt').style.display="block";
+                        document.getElementById('profilebutton').style.display="none";
+
+
+                    }
+                    else{
+                        document.getElementById("loginbutt").style.display="none";
+                        document.getElementById("logoutbutt").style.display="block";
+                        document.getElementById('profilebutton').style.display="block";
+
+
+                    }
+
+
+                },
+                error: function (e) {
+                    console.log(e);
+                }
+
+            }
+        )
+    })
+
 </script>
 </body>
 </html>
