--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -19,6 +19,47 @@
             color:navy;
         }
     </style>
+
+    <style>
+
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            padding-top: 100px; /* Location of the box */
+            left: 0;
+            top: 0;
+            width: auto; /* Full width */
+            height: auto; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
+
+        /* Modal Content */
+        .modal-content {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+        }
+
+        /* The Close Button */
+        .close {
+            color: #aaaaaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
 <!--<nav class="navbar navbar-inverse" style="background-color:#AE1616;width:100%" >
@@ -46,7 +87,22 @@
     </div>
 </nav>-->
 
+<!--modal-->
+<div id="myModal" class="modal container">
 
+    <!-- Modal content -->
+    <div class="modal-content" >
+        <span class="close">&times;</span>
+        <div class="row">
+            <div style="color:green; display: block;"><h3>User is signed up. <a href ="/login">Proceed to login</a></h3></div>
+        </div>
+
+    </div>
+
+</div>
+
+
+<!--modal-->
 <div class="container-fluid" style="background-color:white;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
 <div class="row">
 <div class="col-sm-2"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></div>
@@ -238,7 +294,8 @@ debugger;
                     debugger;
                     if(data ==="Success"){
                         debugger;
-                        document.getElementById("success").style.display="block";
+                        document.getElementById("myModal").style.display="block";
+                        // document.getElementById("success").style.display="block";
 
                     }
 
@@ -262,7 +319,34 @@ debugger;
     }
 </script>
 
+<script>
+    // var modal = document.getElementById('myModal');
+    //
+    // // Get the button that opens the modal
+    // var btn = document.getElementById("reportthisevent");
+    //
+    // var span = document.getElementsByClassName("close")[0];
+    //
+    // // When the user clicks the button, open the modal
+    // btn.onclick = function() {
+    //     modal.style.display = "block";
+    //     document.getElementById("reset_email").value="";
+    // }
 
+
+    span.onclick = function() {
+        modal.style.display = "none";
+        pass_div.style.display="none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+            pass_div.style.display="none";
+        }
+    }
+</script>
 
 
 </body>
