--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -46,7 +46,46 @@
 
 
   <style>
-  .fa {
+
+      .modal {
+          display: none; /* Hidden by default */
+          position: fixed; /* Stay in place */
+          z-index: 1; /* Sit on top */
+          padding-top: 100px; /* Location of the box */
+          left: 0;
+          top: 0;
+          width: auto; /* Full width */
+          height: auto; /* Full height */
+          overflow: auto; /* Enable scroll if needed */
+          background-color: rgb(0,0,0); /* Fallback color */
+          background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+      }
+
+      /* Modal Content */
+      .modal-content {
+          background-color: #fefefe;
+          margin: auto;
+          padding: 20px;
+          border: 1px solid #888;
+          width: 80%;
+      }
+
+      /* The Close Button */
+      .close {
+          color: #aaaaaa;
+          float: right;
+          font-size: 28px;
+          font-weight: bold;
+      }
+
+      .close:hover,
+      .close:focus {
+          color: #000;
+          text-decoration: none;
+          cursor: pointer;
+      }
+
+      .fa {
 padding-top:10px;
   padding-right: 10px;
   padding-left:10px;
@@ -114,6 +153,38 @@ background-color:#dddddd !important;
 </style>
 </head>
 <body>
+
+<!--modal-->
+<div id="myModal" class="modal container">
+
+	<!-- Modal content -->
+	<div class="modal-content" >
+		<span class="close">&times;</span>
+		<div class="row">
+			<div class="col-sm-8">	<h4>What's wrong with this event?</h4></div>
+		</div><br />
+		<div class="row">
+			<textarea rows="4" cols="50" placeholder="Please write here" id="reporttext"> </textarea>
+
+		</div>
+        <div class="row">
+            <button class="btn-default" style="background-color:lightgrey;color:black;border:1px solid lightgrey;border-radius:4px" onclick=""><h5>Send Recovery Code to Email</h5></button>
+        </div>
+        <div class="row">
+            <div id="reported" style="color:red;display:none;"><h6>Event has been reported!</h6></div>
+
+        </div>
+
+	</div>
+
+</div>
+
+
+<!--modal-->
+
+
+
+
 
 <div style='height: 0px;'></div>
 <div align='center' id='btm_banner' style='height: 150px; z-index: 9999;'>
@@ -252,6 +323,17 @@ background-color:#dddddd !important;
     <div class="col-sm-12">
     <a id="twitter_handle" class="twitter-timeline" min-width:350px; data-height="350">Twitter Handle</a> 
     </div>
+             <div class="row">
+                 <div class="col-sm-12">
+
+
+                     <button type="button" class="btn-link" id="reportthisevent">Report Event</button>
+
+                     <!-- <a href="/sign" >Sign Up!!</a>-->
+
+
+                 </div>
+             </div>
     </div> 
 	</div>
 </div>
@@ -503,5 +585,33 @@ $(document).ready(function(){
 
 </script>
 
+	<script>
+        var modal = document.getElementById('myModal');
+
+        // Get the button that opens the modal
+        var btn = document.getElementById("reportthisevent");
+
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks the button, open the modal
+        btn.onclick = function() {
+            modal.style.display = "block";
+            document.getElementById("reset_email").value="";
+        }
+
+
+        span.onclick = function() {
+            modal.style.display = "none";
+            pass_div.style.display="none";
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function(event) {
+                if (event.target == modal) {
+                    modal.style.display = "none";
+                    pass_div.style.display="none";
+                }
+            }
+   </script>
 </body>
 </html>
